# office-converter

./: README.rst  main.py  pyproject.toml
office_converter/: convert.py  main.py
office_converter/core/: VideoFileClip.py
tests/: test_office_converter.py
