[tool.poetry]
name = "office-converter"
version = "0.1.0"
description = ""
authors = ["yellco <dazheltyy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.18.2"
fastapi = "^0.79.0"
python-multipart = "^0.0.5"
moviepy = "^1.0.3"
aiofiles = "^0.8.0"
uuid = "^1.30"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
